unpackaged/main/default/objects/BOOK__c/BOOK__c.object-meta.xml
<CustomObject>
    <label>BOOK</label>
    <nameField>
        <label>Book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOOKS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>