unpackaged/main/default/objects/BOOK__c/fields/B_Author__c.field-meta.xml
<CustomField>
    <fullName>B_Author__c</fullName>
    <label>B_Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>