unpackaged/main/default/objects/BOOK__c/fields/Balance_count__c.field-meta.xml
<CustomField>
    <fullName>Balance_count__c</fullName>
    <label>Balance count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>