unpackaged/main/default/objects/BOOK__c/fields/Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Count__c</fullName>
    <label>Total_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>